--- a/src/design-system/tokens/_sizes.scss
+++ b/src/design-system/tokens/_sizes.scss
@@ -58,8 +58,8 @@ $switch-button-size: 10px;
 // ============================================
 // Scrollbar
 // ============================================
-$scrollbar-width: 5px;
-$scrollbar-height: 5px;
+$scrollbar-width: 8px;
+$scrollbar-height: 9px;
 
 // ============================================
 // Date Picker
